tests/paczka1/fuzzy1/90675253.err
Error in line 4: K7DWBXjN S124 13,82
Error in line 9: rFQNvZLOQh S124 18,5
Error in line 20: VnYfi S124 14,6
Error in line 28: rFQNvZLOQh A413 97,3
Error in line 26: 8cOCLUL S124 79,6
Error in line 31: 8cOCLUL S813 38,3
Error in line 32: 8cOCLUL S124 30,6
